# fcitx5-steam-ibus-frontend

./: CMakeLists.txt  PKGBUILD  README.md  _PKGBUILD  org.fcitx.Fcitx5.Addon.SteamIBusFrontend.metainfo.xml  org.fcitx.Fcitx5.Addon.SteamIBusFrontend.yaml  steamibusfrontend.conf.in.in  steamibusfrontend.cpp  steamibusfrontend.h
.github/workflows/: build.yml
fcitx/: misc_p.h
fcitx-utils/: uuid_p.h
